# Control_System

./: .gitignore  .replit  ACTION_REQUIRED.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  README.md  TROUBLESHOOTING.md  WISHLIST.md  hardware_configuration.toml  package-lock.json  package.json  pyproject.toml  replit.md  start.bat  start.sh
backend/: requirements.txt
backend/src/: main.py
backend/src/modules/: __init__.py
backend/src/modules/daylight_mircat/: __init__.py  controller.py  routes.py  user_settings.json
backend/src/modules/picoscope_5244d/: __init__.py  controller.py  routes.py
backend/src/modules/quantum_composers_9524/: __init__.py  controller.py  routes.py
backend/src/modules/zurich_hf2li/: __init__.py  controller.py  routes.py
docs/docs/sdks/daylight_mircat/: MIRcatSDK.h  MIRcatSDKConstants.py
docs/gui_screenshots/: README.md
docs/references/: GITHUB_REPOSITORIES.md
docs/sdks/daylight_mircat/: MIRcatSDK.h  MIRcatSDKHelpers.py  Main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DashboardView.tsx
frontend/src/components/global/: MainLayout.tsx  Navbar.tsx  Statusbar.tsx
frontend/src/modules/DaylightMIRcat/: DaylightMIRcatView.tsx  api.ts
frontend/src/modules/DaylightMIRcat/components/: LaserControls.tsx  (+4 more)
frontend/src/modules/PicoScope5244D/: PicoScope5244DView.tsx  api.ts
frontend/src/modules/QuantumComposers9524/: QuantumComposers9524View.tsx  api.ts
frontend/src/modules/ZurichHF2LI/: ZurichHF2LIView.tsx  api.ts
(+4 files in other folders)
