[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pyserial>=3.5",
    "python-multipart>=0.0.20",
    "pyvisa>=1.15.0",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
